<resources>
    <string name="app_name">Akhmny fast </string>
    <string name="txt_requestorder">Services</string>
    <string name="txt_register">Register</string>
    <string name="orderRecieved">Order Recieved</string>
    <string name="save">save</string>
    <string name="request_date">Request Date</string>
    <string name="request_time">Request Time</string>
    <string name="total_cost">Total Cost</string>
    <string name="somm_points">Total points</string>
    <string name="_point">points</string>
    <string name="txt_date">Date</string>
    <string name="notavailable">Not available</string>
    <string name="_whats">Connect with us WhatsApp</string>
    <string name="txt_text">Free services from the application to the customers</string>
    <string name="request_delivering_time">Request Delivering Time</string>
    <string name="txt_willinform">Your request is being implemented No. </string>
    <string name="mobile">Mobile</string>
    <string name="validation_name_length"> Enter Full Name contain at least 6 characters</string>
    <string name="nonEmpty">Please, enter the filed</string>
    <string name="validation_number_length">Please, enter the password with at least 4 characters</string>
    <string name="validation_mobile">Please, enter  avalid mobile Number</string>
    <string name="validation_valid_email">Please, enter valid email address</string>
    <string name="validation_date">Date must be in future</string>
    <string name="validation_type">Please, select a gender</string>
    <string name="validation_valid_password">Enter a password contain at least 8 places  </string>
    <string name="validation_address">Fill in the address</string>
    <string name="validation_success">Validation succeeded! \nThat was easy, wasn\'t it?</string>
    <string name="count">Please enter number only</string>
    <string name="min_number">Please enter number greater than 5.5</string>
    <string name="Vlaid_match_password">Password dosent match</string>
    <string name="Valid_IBAN">Please,Enter valid IBAN 34 in length </string>
    <string name="etFNameD"> Full name</string>
    <string name="etIdNumberD">National ID</string>
    <string name="etNumberD">Mobile</string>
    <string name="etEmailD">E-mail</string>
    <string name="etCarNameD">Car name</string>
    <string name="etCarModelD">Car model</string>
    <string name="etCarPlateD">Plate number</string>
    <string name="etAddressD">Address</string>
    <string name="btnREgisterD">Continue</string>
    <string name="etSilImage">PLease Upload  These files :</string>
    <string name="etIban">IBAN</string>
    <string name="etPhotoCar"> Take photo of your car  </string>
    <string name="CopyRigh"> by register you agree to   </string>
    <string name="txt_terms">terms and condition</string>
    <string name="choose_terms">agree to terms and condition to complete registration </string>
    <string name="notify_desk"> Desktop Notification </string>
    <string name="etObserv">Send observation to service provider</string>
    <string name="invitCode">Invitation code here ...</string>
    <string name="TXT_NOTE">This services is available only  at Ryad</string>
    <string name="etIBAN">IBAN</string>
    <string name="etId">photo of national ID /resident</string>
    <string name="etDrivlic">Driving Licences</string>
    <string name="etCarLic">Car Licences</string>
    <string name="PersonalPicture">Profile Picture </string>
    <string name="frontCar">front photo</string>
    <string name="backCar">Back photo</string>
    <string name="txtintro1">In easy steps, sign up now </string>
    <string name="txtintro2">Through the application select your location from the map</string>
    <string name="txtinto3">Among the applications presented, select the order and see details</string>
    <string name="txtintro4">Read the request carefully and then submit the order</string>
    <string name="txtintro5">Good job !! Connect the request with the customer s confirmation of delivery</string>
    <string name="callfriends">Invite friends</string>
    <string name="serviceprovider">Service provider</string>
    <string name="translate_en">EN</string>
    <string name="translate_ar">ع</string>
    <string name="text_signin">Sign in</string>
    <string name="text_register">Do nont have an account ?  </string>
    <string name="text_register_now"> Sign up now </string>
    <string name="text_username">User name</string>
    <string name="text_password">Password </string>
    <string name="text_forgetpass">FORGET PASSWORD? </string>
    <string name="text_code_n_password">C O D E   &amp;  P A S S W O R D</string>
    <string name="text_password_sent">"We've sent you a text message with Registration Code"</string>
    <string name="txt_hint">Hasan Ben Ali Rawdha Riyadh 31213</string>
    <string name="text_submit">Submit</string>
    <string name="text_havent">I haven\'t</string>
    <string name="text_talabat">Careers requests</string>
    <string name="text_fname_caps">Full name</string>
    <string name="text_gnder_caps">Gender</string>
    <string name="text_email">E-mail</string>
    <string name="text_number">Mobile</string>
    <string name="text_passs">Password</string>
    <string name="text_address">Address</string>
    <string name="text_retype_password">Re-type password</string>
    <string name="text_emergency_number">Emergency contact number</string>
    <string name="text_bio">BIO</string>
    <string name="text_zip">ZIPCODE</string>
    <string name="text_reg_code">Registration Code</string>
    <string name="text_create_password">Create Your Password</string>
    <string name="sgnout">Sign out</string>
    <string name="abotuTax">•	التطبيق  تفاعلي ديناميكي يقدم خدمات توصيل للشركات والمؤسسات والصيدليات والبقالات وغيره من الخدمات     وقابل للتحديث  .. وسيتم تصميم وبرمجة التطبيق  باستخدام أفضل التقنيات الحديثة </string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="item_create_account">create account</string>
    <string name="txt_follow">follow us on :</string>
    <string name="item_Myprofile">My profile</string>
    <string name="item_Home">Home</string>
    <string name="item_Myorders">My orders</string>
    <string name="item_contact">Contact us</string>
    <string name="item_cobon">My points</string>
    <string name="my_inbox">My inbox</string>
    <string name="cobon">you have discount with %1$s percent</string>
    <string name="instructions">Instructions</string>
    <string name="about">About APP</string>
    <string name="title_activity_main">akhdmny fast</string>
    <string name="title_activity_home_">Home Activity</string>
    <string name="Tab1_complain">Complain</string>
    <string name="Tab2_suggest">Suggest</string>
    <string name="Tab3_inquire">Inquire</string>
    <string name="app_intro_skip">skip</string>
    <string name="text_forgot_password">Your password will be mailed to your registered email</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_driver_">Driver_Activity</string>
    <string name="txt_disqount_points">discount from my points balance </string>
    <string name="txt_Cobon">Do you have discount?</string>
    <string name="et_entcobon">Enter your discount cobon</string>
    <string name="txt_noservice">Number of services</string>
    <string name="et_service">0 service</string>
    <string name="et_servicecost">25ryal </string>
    <string name="et_delivercost">0.00 ryal</string>
    <string name="txt_requestno"> Request number</string>
    <string name="txt_serviceno"> Number of service </string>
    <string name="txt_servicecost">Service Cost</string>
    <string name="txt_delivercost">Deliver Cost</string>
    <string name="txt_totalcost">Total Cost</string>
    <string name="txt_totalcostPoint">Total points cost</string>
    <string name="et_totalcostt">0 ryal</string>
    <string name="text_submitcobon">Confirm</string>
    <string name="txt_phone">Phone </string>
    <string name="txt_email">E-mail  </string>
    <string name="invitation_message">This app is terrific, give it a try and get more points!</string>
    <string name="tab_currentorder">Current order</string>
    <string name="tab_nextorder">Next order</string>
    <string name="orders">Orders</string>
    <string name="item_Myorder">Orders</string>
    <string name="invit_friend"> Invite a friend </string>
    <string name="invit_accept_friend"> Accept friend invite </string>
    <string name="txtinvit"> Invite your friends</string>
    <string name="txt_discount">Discount from points</string>
    <string name="txt_address">Address</string>
    <string name="txtnewrequest">Add New Request</string>
    <string name="txt_cancelrequest">Request Canceled</string>
    <string name="txt_okrequest">Request Delivered</string>
    <string name="Ryal">SAR</string>
    <string name="service">Service</string>
    <string name="et_disountcost">00</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="ConfirmTitle">Confirm request</string>
    <string name="RquestAccept">Request Accept</string>
    <string name="RequestDetai">Order Detail</string>
    <string name="showPassword">Show Password</string>
    <string name="rewuestNO">Request Recieved Number  %1$s  and you will be notified when an service provider recieve your order  </string>
    <string name="myorderstring">Order Number Is</string>
    <string name="New">new </string>
    <string name="Inprogress">in progress</string>
    <string name="Canceled">Canceled</string>
    <string name="carkind">type:</string>
    <string name="carnumber">plate:</string>
    <string name="carColor">Color:</string>
    <string name="CarModel">model: </string>
    <string name="callNow">Call Now</string>
    <string name="rewuestYes">Your request number %1$s has been received</string>
    <string name="ordercanceledmessage">You Cancel Order Number </string>
    <string name="txtServerProvider"> Text server provider </string>
    <string name="messagespinner">Please make sure you have select  your city and gender  </string>
    <string name="messagesucess">Done successfuly</string>
    <string name="serviceprovidedone">Success order we will send confirmation email to you  </string>
    <string name="servicprovidererror">Happen un expectede error please upload documents again and check your email is not register befor </string>
    <string name="RateDriver"> Order delivered,oops!!
        You cannot rate driver because you didnot open  recieved notification that inform you that he accept your request </string>
    <string name="sendinanothertime">sendLater</string>
    <string name="WriteOrdeDEscription"> Write order detail here</string>
    <string name="ryal"> Ryal </string>
    <string name="large_text">La</string>
    <string name="ؤ">ريال</string>
    <string name="edit_Request">Edit Request</string>
    <string name="from">from:</string>
    <string name="to">to:</string>
    <string name="subject"> subject </string>
    <string name="txt"> Text of the message </string>
</resources>