<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/item_Home"
            android:enabled="true"
            android:icon="@mipmap/home"
            android:title="@string/item_Home"
            android:visible="true"
            app:showAsAction="always" />
        <item
            android:id="@+id/item_Myprofile"
            android:icon="@mipmap/profile"
            android:title="@string/item_Myprofile" />
        <item
            android:id="@+id/item_Myorders"
            android:icon="@mipmap/order"
            app:actionLayout="@layout/new_button"
            android:title="@string/item_Myorders" />

        <item
            android:id="@+id/item_cobon"
            android:checkable="true"
            android:enabled="true"
            android:icon="@drawable/ic_stat_thumb_up"
            android:title="@string/item_cobon"
            android:visible="true" />

        <item
            android:id="@+id/item_my_inbox"
            android:checkable="true"
            android:enabled="true"
            android:icon="@mipmap/msg"
            android:title="@string/my_inbox"
            android:visible="true" />

        <item
            android:id="@+id/item_friends"
            android:icon="@mipmap/share"
            android:title="@string/callfriends"
            android:visible="true" />
        <item
            android:id="@+id/item_serviceprovider"
            android:checkable="true"
            android:enabled="true"
            android:icon="@mipmap/register"
            android:title="@string/serviceprovider"
            android:visible="true" />
        <item
            android:id="@+id/item_Instructions"
            android:checkable="true"
            android:enabled="true"
            android:icon="@mipmap/instruction"
            android:title="@string/instructions"
            android:visible="true" />
        <item
            android:id="@+id/item_about"
            android:checkable="true"
            android:enabled="true"
            android:icon="@mipmap/info"
            android:title="@string/about"
            android:visible="true" />

        <item
            android:id="@+id/item_contac"
            android:checkable="true"
            android:enabled="true"
            android:icon="@mipmap/contact"
            android:title="@string/item_contact"
            android:visible="true" />

        <item
            android:id="@+id/item_signout"
            android:checkable="true"
            android:enabled="true"
            android:icon="@mipmap/exit"
            android:title="@string/sgnout"
            android:visible="true" />


    </group>


</menu>
