<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_gray"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">
            <ExpandableListView
                android:id="@+id/lvExp"
                android:layout_width="fill_parent"
                android:layout_height="350dp"
                android:cacheColorHint="@color/colorPrimary" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!-- Cobons -->
                <TableRow
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="25dp">

                    <Switch
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/txt_Cobon" />

                </TableRow>

                <TableRow>

                    <art4moslm.info.akhdmny.user.component.MyFontEdittextView
                        android:id="@+id/et_cobon"
                        android:hint="@string/et_entcobon" />
                </TableRow>

                <!--  NO OF SERVICES-->
                <TableRow
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:layout_width="16dp"
                        android:text="@string/txt_noservice" />

                    <art4moslm.info.akhdmny.user.component.MyFontEdittextView
                        android:id="@+id/et_noservice"
                        android:layout_width="100dp"
                        android:hint="@string/et_service" />

                </TableRow>


                <!--SERVICE COST -->
                <TableRow
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:layout_width="16dp"
                        android:text="@string/txt_servicecost" />

                    <art4moslm.info.akhdmny.user.component.MyFontEdittextView
                        android:id="@+id/et_servicecost"
                        android:layout_width="100dp"
                        android:hint="@string/et_servicecost" />

                </TableRow>

                <!--DELIVER COST -->
                <TableRow
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:layout_width="16dp"

                        android:text="@string/txt_delivercost" />

                    <art4moslm.info.akhdmny.user.component.MyFontEdittextView
                        android:id="@+id/et_delivercost"
                        android:layout_width="100dp"

                        android:hint="@string/et_delivercost" />

                </TableRow>

                <!--TOTAL COSt  -->
                <TableRow
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:layout_width="16dp"
                        android:text="@string/txt_totalcost" />

                    <art4moslm.info.akhdmny.user.component.MyFontEdittextView
                        android:id="@+id/et_totalcost"
                        android:layout_width="100dp"
                        android:hint="@string/et_totalcostt"

                        />

                </TableRow>

            </TableLayout>

            <CalendarView
                android:id="@+id/calenderItem"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="100dp">

            </CalendarView>

            <Button
                android:id="@+id/btnOrdersubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:background="@color/app_colour"
                android:text="@string/sendinanothertime"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>

