<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@mipmap/confirm"
        android:orientation="vertical"

        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:gravity="center_horizontal"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">




            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="@dimen/activity_horizontal_margin"
                android:duplicateParentState="true"
                android:text="@string/ConfirmTitle"
                android:textColor="@color/black"
                android:drawableStart="@drawable/ic_action_assignment"
                android:textStyle="bold"
                android:textSize="@dimen/activity_horizontal_margin"
                android:drawableLeft="@drawable/ic_action_assignment"
                android:gravity="center_vertical" />

            <!--  NO OF SERVICES-->
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/confirmColor"
                android:orientation="horizontal"
                android:padding="10dp"
                >

                <TextView
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                        android:textStyle="normal"
                    android:text="@string/txt_noservice"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/et_noservicec"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:text="@string/et_service"
                    android:textColor="@color/white"
                    android:gravity="right" />

            </LinearLayout>


            <!--SERVICE COST -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/confirmColor"
            android:padding="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/txt_servicecost"
                android:textColor="@color/white"
                android:layout_marginLeft="10dp" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:id="@+id/et_servicecostc"
                android:text="@string/et_servicecost"
                android:textColor="@color/white"
                android:gravity="right" />

        </LinearLayout>

        <!--DELIVER COST -->
            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/confirmColor"
                android:orientation="horizontal">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:id="@+id/textView3"
                    android:layout_marginStart="10dp"
                    android:text="@string/txt_delivercost"
                    android:textColor="@color/white"
                    android:layout_marginLeft="10dp" />

                <TextView
                    android:id="@+id/et_delivercostc"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:text="@string/et_delivercost"
                    android:textColor="@color/white"
                    android:gravity="right" />

            </LinearLayout>
            <!--Disqount COST -->
            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/confirmColor"
                android:orientation="horizontal">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/txt_discount"
                    android:textColor="@color/white"
                    android:layout_marginLeft="10dp" />

                <TextView
                    android:id="@+id/et_disqountc"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:text="@string/et_disountcost"
                    android:textColor="@color/white"
                    android:gravity="right" />

            </LinearLayout>

            <!--TOTAL COSt  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="26dp"
            android:layout_marginTop="5dp"
            android:background="@color/totalConfirmColor"
            android:orientation="horizontal"
            android:textStyle="bold"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"

                android:layout_weight="1"
                android:text="@string/txt_totalcost"
                android:textColor="@color/white"
                android:layout_marginLeft="10dp" />

            <TextView
                android:id="@+id/et_totalcost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/et_totalcostt"
                android:textColor="@color/white"

                android:gravity="right" />

        </LinearLayout>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_agree"
                    android:textColor="@color/ofWhite"
                    android:layout_width="5dp"
                    android:layout_height="40dp"
                    android:layout_gravity="start"
                    android:background="@drawable/raduis_corner_green"
                    android:focusableInTouchMode="true"
                    android:text="@string/agree"
                    android:textStyle="bold"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/btn_disagree"
                   android:layout_weight="1"
                    android:layout_width="5dp"
                    android:textColor="@color/ofWhite"
                    android:layout_height="40dp"
                    android:layout_gravity="end"
                    android:background="@drawable/raduis_corner_gray"
                    android:text="@string/edit_Request"
                    android:layout_marginStart="10dp"
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp" />

            </LinearLayout>

        <Button
            android:id="@+id/btn_cancel_order_confirm"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/raduis_corner"
            android:text="@string/txt_cancelrequest"
            android:textStyle="bold"
            android:textColor="@color/ofWhite"
            android:gravity="center"
            android:layout_gravity="center"
            />

    </LinearLayout>
</RelativeLayout>

