<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@android:color/white" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_marginBottom="7dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/from"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:id="@+id/edt_name"
                android:layout_weight="1" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="7dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/to"
                android:layout_weight="0.1"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:id="@+id/spinner"
                android:layout_weight="0.9"
                />

        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subject"
            android:id="@+id/edt_object"
            android:layout_marginBottom="7dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/txt"

            android:ems="10"
            android:maxLines="15"
            android:minHeight="100dp"
            android:id="@+id/edt_text" />


    </LinearLayout>

    <Button
        android:text="@string/text_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_submit"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp"
        android:layout_marginRight="16dp"
        android:textColor="@android:color/white"
        android:background="@drawable/raduis_corner"
        android:layout_marginLeft="16dp" />
</RelativeLayout>