<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="300dp"
    android:layout_height="240dp"
    android:layout_gravity="center"
    android:background="@drawable/orderrecevied"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_centerInParent="false"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center_horizontal|center_vertical"
            android:src="@drawable/ic_action_thumb_up"/>
        <TextView
            android:gravity="center_horizontal|center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/orderRecieved"
            android:textSize="@dimen/activity_horizontal_margin"
            android:textColor="@color/color_whgra"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/RquestAccept"
        android:textColor="@color/txtcolor" />

    <TextView
        android:id="@+id/Txt_RequestAccept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/rewuestNO"
        android:textColor="@color/txtcolor" />

    <Button

        android:id="@+id/btn_orderDetail"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@color/app_colour"
        android:text="@string/RequestDetai"
        android:textColor="@color/white" />
</LinearLayout>
</RelativeLayout>